# ResumeRecommender-MLops

./: .dockerignore  .dvcignore  .gitignore  DB.txt  Dockerfile.backend  Dockerfile.frontend  Dockerfile.grafana  Dockerfile.prometheus  README.md  ci.txt  cypher_defination.txt  data.dvc  docker-compose.yml  dvc.yaml  future.txt  init_db.sql  mlflow.db  only_ci.txt  params.yaml  pyproject.toml  requirement_backend.txt  requirements-backend.txt  requirements-frontend.txt  requirements.txt  rr_categorizer_experimentation.ipynb  status.txt  test_ai_engine.py  verify_RDS_connection.py  verify_s3_upload.py
.dvc/: config
.github/workflows/: adaptive_ingesion.yml.disabled  adaptive_ingestion.yml  ci-cd.yml  ci.yml  cicd.yml  serpapi_data_ingestion_monthly.yml
app/api/: main.py
app/services/: ai_insight.py  score_resume.py
artifacts/: nltk_data.dvc
dags/: drift_pipeline.py
data/constants/: jobs.csv  locations.yaml
data_ingestion/jd_ingestion/serp_api/: priority_scheduler.py  serpapi_client.py  serpapi_ingest.py
data_ingestion/processors/: process_data.py
data_ingestion/resume_ingestion/: __init__.py  base_ingestor.py  docx_ingest.py  factory.py  image_ingest.py  pdf_ingest.py  txt_ingestor.py
data_ingestion/roles_ingestion/: ingest_job_categories.py
grafana/dashboards/: full_stack_monitoring.json
grafana/provisioning/dashboard/: dashboard.yaml
models/: .gitignore  all-mpnet-base-v2.dvc
monitoring/: prometheus.yml
notebooks/: n1.ipynb  rr_KB_making.ipynb  rr_categorizing_data_gemini.ipynb  rr_processing_leftover_batches_to_graph_DB.ipynb
prompts/: gemini_based_labelling_prompt.txt  job_description_KB.txt  text_to_triplets_for_cyphers_prompt.txt
resume/: score_resume.py
resume_recommender_mlops.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/: debug_DB.py  download_model_OT.py
src/: label_jobs.py  temp_backfill.py  update_params.py
src/parser/: __init__.py  constant.py  engine.py  utils.py
src/scripts/: check_db.py  manage_drift.py  seed_RDS.py
src/vector_db/: client.py  encoder.py  ingest.py
tests/: conftest.py
tests/integration/: test_api.py  test_vector_db.py
tests/regression/: test_scoring_logic.py
tests/smoke/: test_startup.py
tests/unit/: test_parser.py  test_processors.py  test_utils.py
ui/: app.py
utils/: dates.py  db.py  logger.py  paths.py
