[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "resume-recommender-mlops"
version = "0.1.0"
description = "Resume recommender system with MLOps architecture"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "psycopg2-binary",
    "python-dotenv",
    "python-docx",
    "pymupdf",
    
    # --- THE FIX STARTS HERE ---
    "dvc[s3]",              # Installs dvc and dvc-s3
    "boto3>=1.34.0,<1.35.0", # FORCE this version range. (The "Goldilocks" Zone)
    # ---------------------------

    "mlflow",
    "dagshub",
    "ipykernel",
    "google-search-results",
    "requests",
    "pandas",
    "numpy",
    "beautifulsoup4",
    "tqdm",
    "python-dateutil",
    "pydantic",
    "langdetect",
    "unidecode",
    "nbstripout",
    "ruamel.yaml",
    "pgvector",
    "sentence-transformers>=3.0.0",
    "transformers>=4.40.0",
    "tokenizers>=0.19.0",
    "streamlit",
    "python-multipart",
    "nltk",
    "spacy",
    "neo4j~=5.28"
]

[tool.setuptools.packages.find]
where = ["."]
